<resources>
    <string name="app_name">OhioStateFitLeadersWear</string>
    <string name="heartRateValue">--</string>
    <string name="stepsValue">--</string>
    <string name="locationText">Inactive</string>
    <string name="stepCountText">Steps</string>
    <string name="heartRateText">HR</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string name="connectBtnText">End Session</string>
    <string name="startBtnText">Start</string>
    <string name="title_activity_activate">Activate</string>
    <string name="welcomeText">Welcome to the FitLeaders App. Enter your user ID and then Press Start to begin tracking.</string>
    <string name="title_activity_thank_you">ThankYou</string>
    <string name="thankYouText">Thanks for participating.</string>
    <string name="startOverButton">New Session</string>
    <string name="ok">Ok</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="startText">Start Workout</string>
    <string name="title_activity_start">Start Workout</string>
    <string name="waitingLbl">Waiting...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>