<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.36"
                android:gravity="center"
                android:lines="2"
                android:textAppearance="@android:style/TextAppearance.Holo.Small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/heartRateText" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/stepCountText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/HeartRate"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.38"
                    android:gravity="center"
                    android:text="@string/heartRateValue" />

                <TextView
                    android:id="@+id/Steps"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.30"
                    android:gravity="center"
                    android:text="@string/stepsValue" />

            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.02"
                android:text="@string/connectBtnText"
                android:textAlignment="center" />

        </LinearLayout>
</android.support.wear.widget.BoxInsetLayout>
